fix: add header background for dark mode

--- a/styles/notion.css
+++ b/styles/notion.css
@@ -327,7 +327,7 @@
 }
 
 .dark-mode .notion-header {
-  background: transparent;
+  background: hsla(203, 8%, 20%, 0.8);
   box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.1);
   backdrop-filter: saturate(180%) blur(8px);
 }
